--- a/StoreApp/Pages/_ViewImports.cshtml
+++ b/StoreApp/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using StoreApp
 @using Entities.Models
 @using StoreApp.Pages
+@using StoreApp.Infrasrtructe.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
