--- a/StoreApp/Views/Product/Get.cshtml
+++ b/StoreApp/Views/Product/Get.cshtml
@@ -14,8 +14,24 @@
         
     </div>
 </div>
+<div class="text-center">
+    <div class="btn-group">
+        <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index">
+            <i class="fa-solid fa-house"></i>
+            Home
+        </a>
+        <form id="@Model?.ProductId" asp-page="/cart" method="post">
+            <input type="hidden" name="ProductId" value="@Model?.ProductId" />
+            <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
+            <button type="submit" class="btn btn-outline-secondary rounded-0">
+                <i class="fa fa-cart-plus"></i>
+                Add To Cart
+            </button>
+        </form>
+        <a class="btn btn-outline-secondary" asp-controller="Product" asp-action="ProductCard">
+            <i class="fa-solid fa-list"></i>
+            Products
+        </a>
+    </div>
+</div>
 
-
-<p>
-    <a class="btn btn-warning" asp-controller="Product" asp-action="Index">Products</a>
-</p>
