--- a/StoreApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/StoreApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -37,6 +37,10 @@
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category"
                                asp-action="Index">Categories</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Order"
+                               asp-action="Index">Orders</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="navbar-nav">
