--- a/StoreApp/Views/Home/Index.cshtml
+++ b/StoreApp/Views/Home/Index.cshtml
@@ -1,4 +1,9 @@
 @{
     ViewData["Title"] = "Index";
 }
-<h1>Index</h1>
+<div class="text-center">
+    <h1>Showcase</h1>
+    <hr />
+</div>
+
+@await Component.InvokeAsync("ShowCase")
