--- a/StoreApp/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/StoreApp/Views/Shared/Components/CategoryList/Default.cshtml
@@ -5,7 +5,8 @@
         @foreach (var item in Model)
         {
             <li class="list-group-item">
-                @item.CategoryName
+                <a asp-route-categoryId="@item.CategoryId"> @item.CategoryName</a>
+
             </li>
         }
     </ul>
