--- a/StoreApp/Views/Product/ProductCard.cshtml
+++ b/StoreApp/Views/Product/ProductCard.cshtml
@@ -8,6 +8,7 @@
 <div class="row">
     <div class="col-md-3">
         @await Component.InvokeAsync("CategoryList")
+        @await Component.InvokeAsync("ProductFilterMenu")
     </div>
     <div class="col-md-9">
         <div class="row">
