--- a/StoreApp/Views/Shared/Components/ProductFilterMenu/Default.cshtml
+++ b/StoreApp/Views/Shared/Components/ProductFilterMenu/Default.cshtml
@@ -1,17 +1,29 @@
-﻿<div class="my-3">
-    <h6 class="lead">
-        <i class="fa fa-filter text-secondary"></i>
-        Filters
-    </h6>
-</div>
-<div class="my-2">
-    <form method="get" asp-action="ProductCard">
-        <input type="hidden" name="categoryId" value="@(Context.Request.Query["categoryId"])"/>
-        <div class="form-group">
-            <input class="form-control" name="SearchTerm" placeholder="Search" />
+﻿<div class="card mt-3">
+    <div class="card-header">
+        <div class="my-3">
+            <h6 class="lead">
+                <i class="fa fa-filter text-secondary"></i>
+                Filters
+            </h6>
         </div>
-        <div class="form-group my-2">
-            <button class="btn btn-sm btn-primary">Search</button>
+    </div>
+    <div class="card-body">
+        <div class="my-2">
+            <form method="get" asp-action="ProductCard">
+                <input type="hidden" name="categoryId" value="@(Context.Request.Query["categoryId"])" />
+                <div class="form-group my-2">
+                    <input class="form-control" name="SearchTerm" placeholder="Search" />
+                </div>
+                <div class="form-group my-2">
+                    <input class="form-control" name="MinPrice" placeholder="Min. Price" />
+                </div>
+                <div class="form-group my-2">
+                    <input class="form-control" name="MaxPrice" placeholder="Max. Price" />
+                </div>
+                <div class="form-group my-2">
+                    <button class="btn btn-sm btn-primary">Search</button>
+                </div>
+            </form>
         </div>
-    </form>
+    </div>
 </div>
