--- a/StoreApp/Pages/_ViewImports.cshtml
+++ b/StoreApp/Pages/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using StoreApp.Pages
 @using StoreApp.Infrasrtructe.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, StoreApp
