--- a/StoreApp/Views/Product/ProductCard.cshtml
+++ b/StoreApp/Views/Product/ProductCard.cshtml
@@ -1,4 +1,5 @@
-@model IQueryable<Product>
+@using StoreApp.Models
+@model ProductListViewModel
 
 @{
     ViewData["Title"] = "Products";
@@ -8,10 +9,11 @@
     <div class="col-md-3">
         @await Component.InvokeAsync("CategoryList")
         @await Component.InvokeAsync("ProductFilterMenu")
+        <div products="" number="6"></div>
     </div>
     <div class="col-md-9">
         <div class="row">
-            @foreach (Product prd in Model)
+            @foreach (Product prd in Model.Products)
             {
                 <div class="col-sm-12 col-md-4 my-2">
                     <div class="card" style="width: 18rem;">
@@ -48,6 +50,10 @@
                     </div>
                 </div>
             }
+        </div>
+    </div>
+    <div class="text-center">
+        <div page-model="@Model?.Pagination" page-action="ProductCard" page-classes-enabled="true" page-class="btn" page-class-normal="btn-outline-dark" page-class-selected="btn-secondary" class="btn-group">
         </div>
     </div>
 
