--- a/StoreApp/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/StoreApp/Views/Shared/Components/CategoryList/Default.cshtml
@@ -1,13 +1,23 @@
 ﻿@model IEnumerable<Category>
 
-<div>
-    <ul class="list-group">
-        @foreach (var item in Model)
-        {
-            <li class="list-group-item">
-                <a asp-route-categoryId="@item.CategoryId"> @item.CategoryName</a>
+<div class="card">
+    <div class="card-header">
+        <div class="mt-3">
+            <h6 class="lead">
+                <i class="fa fa-solid fa-bars text-secondary"></i>
+                Categories
+            </h6>
+        </div>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            @foreach (var item in Model)
+            {
+                <li class="list-group-item">
+                    <a asp-route-categoryId="@item.CategoryId"> @item.CategoryName</a>
 
-            </li>
-        }
-    </ul>
+                </li>
+            }
+        </ul>
+    </div>
 </div>
