--- a/StoreApp/Views/Shared/_Layout.cshtml
+++ b/StoreApp/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                         </li> *@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product"
-                               asp-action="ProductCard">Products with Cards (@await Component.InvokeAsync("ProductSummary"))</a>
+                               asp-action="ProductCard">Products(@await Component.InvokeAsync("ProductSummary"))</a>
                         </li>
                       @*   <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Category"
@@ -74,9 +74,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - StoreApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+           <partial name="_Footer"/>
     </footer>
 
     <script src="~/lib/jquery/jquery.min.js"></script>
