--- a/StoreApp/Views/_ViewImports.cshtml
+++ b/StoreApp/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using Entities.Models
 @using StoreApp.Infrasrtructe.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, StoreApp
