--- a/StoreApp/Pages/_ViewImports.cshtml
+++ b/StoreApp/Pages/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using StoreApp
 @using Entities.Models
 @using StoreApp.Pages
-@using StoreApp.Infrasrtructe.Extensions
+@using StoreApp.Infrasrtructure.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, StoreApp
