--- a/StoreApp/Views/_ViewImports.cshtml
+++ b/StoreApp/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using StoreApp
 @using Entities.Models
-@using StoreApp.Infrasrtructe.Extensions
+@using StoreApp.Infrasrtructure.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, StoreApp
