--- a/StoreApp/Views/Shared/_Layout.cshtml
+++ b/StoreApp/Views/Shared/_Layout.cshtml
@@ -50,10 +50,8 @@
                                 <i class="fa fa-cart-shopping"></i> Cart (@await Component.InvokeAsync("CartSummary"))
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Dashboard"
-                               asp-action="Index" target="_blank">Admin</a>
-                        </li>
+                      
+                        <partial name="_LoginMenu"></partial>
                        @*  <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category"
                                asp-action="Index">Giriş Yap</a>
