--- a/StoreApp/Views/Account/Register.cshtml
+++ b/StoreApp/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@* @model RegisterDto
+﻿@model RegisterDto
 
 <div class="text-center my-5">
 
@@ -41,4 +41,4 @@
         </form>
     </div>
     <div class="col-md-3"></div>
-</div> *@
+</div>
