--- a/StoreApp/Views/_ViewImports.cshtml
+++ b/StoreApp/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using StoreApp
 @using Entities.Models
+@using Entities.Dtos
 @using StoreApp.Models
 @using StoreApp.Infrasrtructure.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
