--- a/StoreApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/StoreApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -41,6 +41,14 @@
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Order"
                                asp-action="Index">Orders</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Role"
+                               asp-action="Index">Roles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="User"
+                               asp-action="Index">Users</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="navbar-nav">
@@ -49,10 +57,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home"
                                asp-action="Index" target="_blank">Web</a>
                         </li>
-                    <li class="nav-item">
+                  @*   <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category"
                            asp-action="Index">Giriş Yap</a>
-                    </li>
+                    </li> *@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category"
                                asp-action="Index">Çıkış Yap</a>
